--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,5 +84,5 @@ stages:
                   displayName: 'Azure App Service Deploy: website'
                   inputs:
                     azureSubscription: 'spaceserviceconnection'
-                    appName: '$(WebAppName)'
+                    appName: 'spacea'
                     package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
